# jjit

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  PLAN.md  README.md  README.zh.md  TURN1.md  TURN2.md  TURN3.md  TURN4.md  TURN5.md  TURN6.md  TURN7.md  TURN8.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
.jjit/: config.toml
docs/: vcs-runner-readme.md
examples/: test_log.rs
locales/: en.yml  i18n.yml  zh.yml
scripts/: release.sh
src/: cli.rs  config.rs  helper.rs  jj_util.rs  lib.rs  llm.rs  main.rs  output.rs
src/commands/: commit.rs  config.rs  goto.rs  mod.rs  pack.rs
tests/: config_tests.rs  xml_parser_tests.rs
tests/integration/: commit_integration.rs  config_integration.rs  goto_integration.rs  pack_integration.rs
